# modules-and-pch-libcxx-bug

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  module.cpp  module.cppm  stable.h
